--- a/client/src/screens/Peppers/Peppers.css
+++ b/client/src/screens/Peppers/Peppers.css
@@ -4,4 +4,5 @@
   justify-content: center;
   align-items: center;
   margin-top: 85px;
+  height: 100vh;
 }
